--- a/metadata.yaml
+++ b/metadata.yaml
@@ -27,6 +27,7 @@ subjects:
 - !lcsh 'Adventure stories'
 - !lcsh 'Africa -- Juvenile fiction'
 - !lcc 'PZ'
+- GITenberg
 title: 'In Search of the Okapi
 
   A Story of Adventure in Central Africa'
